# multipole-conv

./: CITATION.cff  CMakeLists.txt  README.md
include/: command_line_parser.h  constants.h  conventions.h  math.h  matrix.h  matrix_operations.h  multipole_conv_funcs.h  options.h  print_multipole_moments.h  version.h.in
multipole-conv/: CMakeLists.txt
multipole-conv/include/: command_line_parser.h  conventions.h  math.h  matrix.h  multipole_conv_funcs.h  options.h  print_multipole_moments.h  square_matrix.h  square_matrix_operations.h  version.h.in
multipole-conv/src/: CMakeLists.txt  command_line_parser.cpp  math.cpp  matrix_operations.cpp  multipole-conv.cpp  multipole_conv_funcs.cpp
python/: multipole-conv.py
src/: command_line_parser.cpp  math.cpp  matrix_operations.cpp  multipole-conv.cpp  multipole_conv_funcs.cpp
